feat(progress):can't get cubit to talk to other views

--- a/lib/l10n/arb/app_en.arb
+++ b/lib/l10n/arb/app_en.arb
@@ -3,5 +3,9 @@
     "drawerAppBarTitle": "RepKeeper",
     "@drawerAppBarTitle": {
         "description": "RepKeeper keeps up with your reps."
-    }
+    },
+    "bottomNavigationBarItemWorkout": "Workout",
+    "bottomNavigationBarItemSettings": "Settings",
+    "bottomNavigationBarItemSchedule": "Schedule",
+    "bottomNavigationBarItemResults": "Results"
 }
