--- a/lib/l10n/arb/app_es.arb
+++ b/lib/l10n/arb/app_es.arb
@@ -3,5 +3,9 @@
     "drawerAppBarTitle": "RepKeeper",
     "@drawerAppBarTitle": {
         "description": "RepKeeper mucho bueno."
-    }
+    },
+    "bottomNavigationBarItemWorkout": "Workout",
+    "bottomNavigationBarItemSettings": "Settings",
+    "bottomNavigationBarItemSchedule": "Schedule",
+    "bottomNavigationBarItemResults": "Results"
 }
